renomeado:    style.css -> css/style.css modificado:   index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik&family=Secular+One&display=swap"
@@ -42,7 +42,7 @@
 
      <div class="slider">
 
-        <div class="slide" for="slide1" style="--img: url('img/itadori.jpg')">
+        <div class="slide" for="slide1" style="--img: url('../img/itadori.jpg')">
             <div class="content">
                 <div class="logo"></div>
                 <h2>Yuji Itadori</h2>
@@ -50,7 +50,7 @@
             </div>
         </div>
 
-        <div class="slide" for="slide2" style="--img: url('img/megumi.jpg')">
+        <div class="slide" for="slide2" style="--img: url('../img/megumi.jpg')">
             <div class="content">
                 <div class="logo"></div>
                 <h2>Megumi Fushiguro</h2>
@@ -58,7 +58,7 @@
             </div>
         </div>
 
-        <div class="slide" for="slide3" style="--img: url('img/nobara.jpg')">
+        <div class="slide" for="slide3" style="--img: url('../img/nobara.jpg')">
             <div class="content">
                 <div class="logo"></div>
                 <h2>Nobara Kugisaki</h2>
@@ -66,7 +66,7 @@
             </div>
         </div>
 
-        <div class="slide" for="slide4" style="--img: url('img/yuta.jpg')">
+        <div class="slide" for="slide4" style="--img: url('../img/yuta.jpg')">
             <div class="content">
                 <div class="logo"></div>
                 <h2>Yuta okkotsu</h2>
@@ -74,7 +74,7 @@
             </div>
         </div>
 
-        <div class="slide" for="slide5" style="--img: url('img/maki.jpg')">
+        <div class="slide" for="slide5" style="--img: url('../img/maki.jpg')">
             <div class="content">
                 <div class="logo"></div>
                 <h2>Maki Zenin</h2>
@@ -82,7 +82,7 @@
             </div>
         </div>
 
-        <div class="slide" for="slide6" style="--img: url('img/inumaki.jpg')">
+        <div class="slide" for="slide6" style="--img: url('../img/inumaki.jpg')">
             <div class="content">
                 <div class="logo"></div>
                 <h2>Toge Inumaki</h2>
@@ -91,7 +91,7 @@
             
         </div>
 
-        <div class="slide" for="slide7" style="--img: url('img/panda.jpg')">
+        <div class="slide" for="slide7" style="--img: url('../img/panda.jpg')">
             <div class="content">
                 <div class="logo"></div>
                 <h2>Panda</h2>
@@ -99,7 +99,7 @@
             </div>
         </div>
 
-        <div class="slide" for="slide8" style="--img: url('img/nanami.jpg')">
+        <div class="slide" for="slide8" style="--img: url('../img/nanami.jpg')">
             <div class="content">
                 <div class="logo"></div>
                 <h2>Nanami Kento</h2>
@@ -107,7 +107,7 @@
             </div>
         </div>
 
-        <div class="slide" for="slide9" style="--img: url('img/gojo.jpg')">
+        <div class="slide" for="slide9" style="--img: url('../img/gojo.jpg')">
             <div class="content">
                 <div class="logo"></div>
                 <h2>Satoru Gojo</h2>
